# AoC

./: .gitignore  LICENSE  README.md
2020/: .gitignore  AoC2020XYZ.cabal  CHANGELOG.md  README.md  g  r
2020/src/: Main.hs
2020/src/Challanges/: Day1.hs
2021/: main.py
