cabal-version:      2.4
name:               AoC2020XYZ
version:            0.1.0.0
synopsis:           Advent of Code 2020 in Haskell by XinYaanZyoy

-- A longer description of the package.
-- description:
homepage:           https://github.com/XinYaanZyoy/AoC2020XYZ

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             XinYaanZyoy
maintainer:         XinYaanZyoy@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable AoC2020XYZ
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Challanges.Day1

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010
